--- a/static/style.css
+++ b/static/style.css
@@ -1,34 +1,84 @@
 body {
     font-family: 'Poppins', sans-serif;
+    line-height: 1.6;
     background-color: #eae7dc; /* Light beige background */
-    margin: 5px;
-    padding: 2px;
-    padding-left: 20px; /* Added left padding */
+    margin: 0;
+    padding: 0;
     color: #333; /* Dark text for contrast */
 }
 
-header {
-    text-align: center;
-    margin-bottom: 20px;
-    margin-left: 15px; /* Added left margin for header */
+
+.title-content {
+    padding-left: 20px;
 }
 
-header h1 {
-    color: #3d405b; /* Dark blue */
-    font-size: 2.8rem;
-    margin: 5px;
+h1 {
+    font-size: 3.5rem;
+    margin-bottom: 5px;
+}
+
+.title-part-1 {
+    color: black; /* Replace with your desired color */
+}
+
+.title-part-2 {
+    color: #738dbd; /* Replace with your desired color */
 }
 
 .container {
     display: flex;
+    padding: 20 20px;
     width: 100%;
+    margin-bottom:20px;
 }
 
+button {
+    background-color: #738dbd; /* A pleasant blue */
+    color: #ffffff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px; /* Rounded corners */
+    cursor: pointer;
+    transition: background-color 0.3s ease; /* Transition for interaction */
+}
+  
+button:hover {
+    background-color: rgb(87, 107, 143); /* Darker shade on hover */
+}
+
+.input-section {
+    margin: 10px;
+    width: 350px;
+}
 
 .section {
     flex: 1;
+    flex-wrap: wrap;
     margin: 10px;
-    width: max-content;
+    background-color: #f8f9fa; 
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
+    margin-bottom: 20px; /* Space between sections */
+}
+
+.section h4 {
+    color: #738dbd; /* A pleasant blue */
+    margin-bottom: 0.5rem; /* Space below heading */
+}
+
+.possible-answers-list {
+    list-style-type: none; /* Remove default list styling */
+    padding: 0;
+    margin: 0;
+    max-height: 200px; /* Set a max height */
+    overflow-y: auto; /* Enable scroll if list is long */
+}
+
+
+
+.possible-answers-list li:hover {
+    background-color: #e9ecef; /* Change background on hover */
 }
 
 .letter-input {
@@ -42,8 +92,8 @@ header h1 {
 }
 
 .grey { background-color: grey; }
-.green { background-color: green; }
-.yellow { background-color: yellow; }
+.green { background-color: #499167; }
+.yellow { background-color: #C9BF65; }
 
 .color-input {
     opacity: 0;         /* Make them fully transparent */
@@ -61,6 +111,12 @@ header h1 {
     background-color: #f8d7da;
     color: #721c24;
     border: 1px solid #f5c6cb;
+    position: fixed;
+    top: 0; 
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    z-index: 1000;
 }
 
 .wordle-row{
@@ -82,3 +138,56 @@ header h1 {
     border-radius: 3px;
 }
 
+.recommendation {
+    font-size: 1rem; /* Standard font size */
+    margin: 20px 0; /* More margin for a cleaner look */
+    padding: 15px; /* Slightly more padding for a better text display */
+    background-color: #ffffff; /* White background for simplicity */
+    border: 4px solid #577bab; /* Keeping the bold line for emphasis */
+    color: #333; /* Darker color for modern look */
+    border-radius: 3px; /* Less rounded corners for a sleek look */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Slightly deeper shadow for subtle depth */
+    display: block; /* Block display to occupy the full width */
+    width: fit-content;
+}
+
+.recommendation strong {
+    color: #2c7be5; /* Color that matches the border for consistency */
+    font-weight: 600; /* Slightly less bold for a modern feel */
+    font-size: 1.3rem;
+}
+
+
+.about-section {
+    background-color: #738dbd; /* Subtle background color */
+    padding: 40px 0; /* Vertical padding */
+    text-align: left; /* Center-aligns the text */
+}
+
+.about-content {
+    max-width: 1000px; /* Maximum width for the content */
+    margin: 0 auto; /* Centers the content block */
+    padding: 0 20px; /* Padding on the sides */
+}
+
+.about-section h2 {
+    color: #cacaca; /* Dark color for headings */
+    font-size: 1.75rem; /* Slightly larger font size for headings */
+    margin-bottom: 20px; /* Space below the heading */
+}
+
+.about-section p {
+    color: #131313; /* Slightly softer color for the text */
+    font-size: 1rem; /* Standard font size for paragraph */
+    line-height: 1.6; /* Line height for better readability */
+    margin-bottom: 20px; /* Space between paragraphs */
+}
+
+.about-section a {
+    color: #0066cc; /* Standout color for links */
+    transition: color 0.3s ease; /* Smooth transition for hover effects */
+}
+
+.about-section a:hover {
+    color: #003366; /* Darker color on hover for links */
+}
